Fix horizontal scroll bar

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,6 +55,7 @@ body {
   color: var(--font-color);
   position: relative;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
